# N1o1-Clinical-Trials-Public

./: .env.example  .gitignore  .replit  .replit.new  CONTRIBUTING.md  CUSTOM_DOMAIN_GUIDE.md  DEPLOYMENT_GUIDE.md  FINAL_DEPLOYMENT_FIX.md  FINAL_FIXES_SUMMARY.md  FIX_NETLIFY_404.md  LICENSE  N1o1-Clinical-Trial-AI.textClipping  NETLIFY_REDIRECT_FIX.md  Procfile  README.md  REDIRECT_FIX_GUIDE.md  SECURITY_NOTICE.md  SUMMARY_OF_FIXES.md  WORKFLOW_CMD.txt  WORKFLOW_COMMAND.txt  WORKFLOW_FIX.md  WORKFLOW_FIXED.sh  WORKFLOW_FIXED_COMMAND.txt  app.py  app_starter.py  apply_deployment_fixes.py  check_domain.py  check_js_errors.py  check_server.py  create_chat_tables.py  demo_server.py  deploy.sh  deployment_diagnostics.py  diagnose_redirect.py  direct_flask.sh  direct_server.py  direct_starter.sh  eligibility.py  error_check.py  fast_start.sh  (+90 more)
attached_assets/: Pasted--500ST-500-api-bp-route-log-client-error-methods-POST-def-log-cl-1745233605661.txt  Pasted-05-02-11-05-20-Headers-Host-trials-n1o1app-com-User-Agent-Mozilla-5-0-Windows-NT-10-0--1746209552461.txt  Pasted-2025-04-21-18-03-59-12-ebd1d490-User-2025-04-22-01-03-59-0000-34-INFO-Booting-worker-with--1745351925464.txt  Pasted-4-21-04-38-52-command-finished-with-error-sh-c-python-main-py-signal-terminated-04-21-04-55-18--1745305388897.txt  Pasted-Here-s-a-tailored-response-you-can-paste-into-Replit-AI-to-complete-the-assistant-guarantee-Ope-1744943471959.txt  Pasted-Hi-I-m-N1O1ai-Would-you-like-help-with-the-clinical-trial-app-or-guidance-on-our-nitric-oxide-ther-1744963287029.txt  analysis.html  analyzer_routes.py  (+7 more)
(+88 files in other folders)
