[project]
name = "n1o1-clinical-trials"
version = "0.1.0"
description = "N1O1 Clinical Trials - Nitrite Dynamics Simulator for Clinical Research"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-migrate",
    "flask-session",
    "flask-login",
    "flask-wtf",
    "gunicorn>=23.0.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "scipy>=1.15.2",
    "statsmodels>=0.14.4",
    "sqlalchemy",
    "openai",
    "requests",
    "fpdf",
    "werkzeug",
    "uuid",
]
